--- a/alcs-frontend/src/app/features/application/overview/overview.component.html
+++ b/alcs-frontend/src/app/features/application/overview/overview.component.html
@@ -1,3 +1,13 @@
 <h3>Overview</h3>
-<h5>Application Event Timeline</h5>
-<app-timeline [events]="events"></app-timeline>
+<section>
+  <h5>Proposal Summary</h5>
+  <app-inline-edit
+    [value]="summary"
+    placeholder="Add Proposal Summary"
+    (save)="onSaveSummary($event)"
+  ></app-inline-edit>
+</section>
+<section>
+  <h5>Application Event Timeline</h5>
+  <app-timeline [events]="events"></app-timeline>
+</section>
