--- a/alcs-frontend/src/app/shared/inline-edit/inline-edit.component.html
+++ b/alcs-frontend/src/app/shared/inline-edit/inline-edit.component.html
@@ -19,6 +19,7 @@
       class="editable"
       type="text"
       name="value"
+      maxlength="400"
       [placeholder]="placeholder"
       #editInput
       [(ngModel)]="pendingValue"
