--- a/alcs-frontend/src/styles/ngselect.scss
+++ b/alcs-frontend/src/styles/ngselect.scss
@@ -18,14 +18,19 @@
   }
 }
 
-.ng-select.card-local-government,
-.ng-select.card-type,
-.ng-select.card-region {
+.ng-appearance-outline {
   .ng-value {
     margin-top: 6px;
   }
 
   input {
     padding: 10px !important;
+  }
+}
+
+//This only changes the padding of the placeholder when its not focused/selecting
+ng-select:not(.ng-select-opened) .ng-appearance-outline:not(.ng-has-value) {
+  .ng-placeholder {
+    margin-top: 6px;
   }
 }
