--- a/alcs-frontend/src/styles/typography.scss
+++ b/alcs-frontend/src/styles/typography.scss
@@ -1,4 +1,5 @@
 @import '@bcgov/bc-sans/css/BCSans.css';
+@import './colors';
 
 $font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 
@@ -56,6 +57,12 @@ p,
 .body2-text {
   @include typography-style(14px, 400);
   line-height: 24px;
+}
+
+.body-large {
+  @include typography-style(19px, 400);
+  line-height: 24px;
+  color: $grey-dark
 }
 
 .body-small {
