--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -15,7 +15,7 @@ $white: #ffffff;
 $grey: #929292;
 $grey-dark: #565656;
 $grey-light: #efefef;
-$link-color: #1c3f94;
+$link-color: #1a5a96;
 
 $bg-color: #f5f7e7;
 
