Add logic for setting Application Decision Date
* Set decision date when creating the first decision
* Edit the decision date when editing the first decision

--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
@@ -13,7 +13,7 @@
             formControlName="startDate"
             name="startDate"
             required
-            [min]="minDate"
+            [min]="minDate | startOfDay"
           />
           <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #startDatePicker type="date"> </mat-datepicker>
