--- a/alcs-frontend/src/styles/ngselect.scss
+++ b/alcs-frontend/src/styles/ngselect.scss
@@ -31,6 +31,14 @@
 //This only changes the padding of the placeholder when its not focused/selecting
 ng-select:not(.ng-select-opened) .ng-appearance-outline:not(.ng-has-value) {
   .ng-placeholder {
-    margin-top: 6px;
+    margin-top: 2px;
   }
+}
+
+.ng-select .ng-select-container.ng-appearance-outline {
+  min-height: 56px;
+}
+
+.ng-select .ng-select-container .ng-value-container .ng-placeholder {
+  color: rgba(0, 0, 0, 0.6) !important;
 }
