--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -76,7 +76,7 @@
       </div>
     </div>
     <div style="margin-right: -16px" class="right">
-      <button matTooltip="Move board" [matMenuTriggerFor]="moveMenu" mat-icon-button>
+      <button matTooltip="Move Board" [matMenuTriggerFor]="moveMenu" mat-icon-button>
         <mat-icon>move_down</mat-icon>
       </button>
       <mat-menu class="move-board-menu" xPosition="before" #moveMenu="matMenu">
