--- a/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
@@ -6,16 +6,18 @@
   </div>
   <div class="header-row">
     <div class="left">
-      <h3 class="card-title">'Mock, get from app'</h3>
-      <div
-        class="center application-type"
-        [ngStyle]="{
-          backgroundColor: recon.typeDetails.backgroundColor,
-          color: recon.typeDetails.textColor
-        }"
-      >
-        {{ recon.typeDetails.label }}
-      </div>
+      <h3 class="card-title">
+        'Mock, get from app'
+        <span
+          class="center application-type"
+          [ngStyle]="{
+            backgroundColor: recon.typeDetails.backgroundColor,
+            color: recon.typeDetails.textColor
+          }"
+        >
+          {{ recon.typeDetails.label }}
+        </span>
+      </h3>
     </div>
     <div>
       <button
@@ -34,7 +36,7 @@
   <div class="header-row">
     <div class="left"></div>
     <div style="margin-right: -16px" class="right">
-      <button title="Move board" [matMenuTriggerFor]="moveMenu" mat-icon-button>
+      <button matTooltip="Move Board" [matMenuTriggerFor]="moveMenu" mat-icon-button>
         <mat-icon>move_down</mat-icon>
       </button>
       <mat-menu class="move-board-menu" xPosition="before" #moveMenu="matMenu">
@@ -46,7 +48,12 @@
           <span *ngIf="recon.board === board.code"><mat-icon class="selected-board-icon">check</mat-icon></span>
         </button>
       </mat-menu>
-      <button class="toggle-priority" title="Change priority" (click)="onTogglePriority()" mat-icon-button>
+      <button
+        [matTooltip]="recon.highPriority ? 'Remove Priority' : 'Add Priority'"
+        class="toggle-priority"
+        (click)="onTogglePriority()"
+        mat-icon-button
+      >
         <div
           class="priority"
           [ngClass]="{
