--- a/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.html
+++ b/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.html
@@ -1,3 +1,3 @@
-<div [matTooltip]="fullName" class="avatar-circle">
+<div matTooltip="Assignee: {{fullName}}" class="avatar-circle">
   <span class="center">{{ initials }}</span>
 </div>
