--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.scss
@@ -34,3 +34,11 @@ label {
     margin-right: 16px;
   }
 }
+
+.chair-review-date {
+  grid-column: 1 / 3;
+}
+
+.toggle-label {
+  color: rgba(0, 0, 0, 0.6);
+}
