Add No Decisions
* Fix info request dialog to allow start and end date to be the same

--- a/alcs-frontend/src/app/features/application/decision/decision.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.scss
@@ -92,3 +92,12 @@ section {
 .delete-file-icon {
   color: $error-color;
 }
+
+.no-decisions {
+  margin-top: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $grey-light;
+  height: 72px;
+}
