--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
@@ -32,7 +32,7 @@
             [matDatepicker]="endDate"
             [(ngModel)]="model.endDate"
             name="endDate"
-            [min]="model.startDate"
+            [min]="model.startDate | startOfDay"
           />
           <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
           <mat-datepicker #endDate type="date"> </mat-datepicker>
