--- a/alcs-frontend/src/app/features/application/decision/decision.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.html
@@ -2,6 +2,9 @@
   <h3>Decision</h3>
   <button mat-flat-button color="primary" (click)="onCreate()">+ New Decision</button>
 </div>
+<section class="no-decisions" *ngIf="!decisions.length">
+  <div>No Decisions</div>
+</section>
 <section class="decision" *ngFor="let decision of decisions; let i = index">
   <div *ngIf="decisions.length - 1 !== i" class="recon-label">Recon</div>
   <input hidden type="file" #file (change)="attachFile(decision.uuid, $event)" placeholder="Upload file" />
