Provision page updates
* If user has roles, take them to home
* Clear token if user has no roles so they can easily re-fresh

--- a/alcs-frontend/src/app/features/provision/provision.component.html
+++ b/alcs-frontend/src/app/features/provision/provision.component.html
@@ -1,4 +1,5 @@
-<div>
-  Thank you for providing your credentials - the system administrator will now enable access if you are an approved
-  user. You will receive a confirmation email shortly.
+<div class="body1-text">
+  <h5>Welcome to ALCS</h5>
+  You don't have permissions to the system. You will receive an email shortly providing
+  an access update.
 </div>
