--- a/alcs-frontend/src/app/features/provision/provision.component.scss
+++ b/alcs-frontend/src/app/features/provision/provision.component.scss
@@ -1,4 +1,8 @@
-div {
-  margin: 30vh 24px;
+.body1-text {
+  margin: 30vh 24px !important;
   max-width: 700px;
+}
+
+h5 {
+  margin-bottom: 24px !important;
 }
