--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -262,6 +262,6 @@ mat-button-toggle-group {
   }
 }
 
-.mat-form-field-appearance-outline .mat-form-field-flex {
+.date-picker.mat-form-field-appearance-outline .mat-form-field-flex {
   height: 56px;
 }
